gcc-14.2.0/gcc/testsuite/gdc.test/compilable/issue21882.d
version https://git-lfs.github.com/spec/v1
oid sha256:ea324493bca6c4d676bbef7c12525d9ea2698bb0ed6ee872760eb6b24ff9bc0a
size 304
