gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/b20780.d
version https://git-lfs.github.com/spec/v1
oid sha256:cbb91bd2bc294595daf2a728c9c6ed54b7632e4e1c46174fe5686a8f306bf4ce
size 304
